# dungeon-master-ai

./: .gitignore  Dockerfile  Open Game Content.md  Open Game License  README.md  action.yml  domain.yml  dungeon_master.py  entrypoint.sh  pyproject.toml
.github/workflows/: dungeon-master-ai.yml
adventures/: the_tomb_of_baradin_stormfury.json
data/: CRD3_dm_utterances.yml  CRD3_player_utterances.yml  abilities.json  alignments.json  armor.json  attacks.json  characters.json  classes.json  conditions.json  equipment.json  features.json  languages.json  magic_items.json  monsters.json  nlu.yml  races.json  spells.json  subclasses.json  weapon_properties.json  weapons.json
data/domain/: actions.json  alignments.json  armor.json  characters.json  classes.json  equipment.json  features.json  languages.json  magic.json  monster_features.json  monsters.json  npcs.json  races.json  skills.json  treasure.json  weapon_properties.json  weapons.json  xp.json
dmai/: __init__.py  dm.py  dmai_helpers.py
dmai/agents/: agent.py  monster_agent.py  player_agent.py
dmai/domain/: __init__.py  abilities.py  actions.py  alignment.py  armor.py  attacks.py  conditions.py  domain.py  equipment.py  features.py  languages.py  skills.py  spells.py  weapons.py
dmai/game/: __init__.py  adventure.py  game.py  player.py  state.py
dmai/ui/: ui.py  (+1 more)
rasa/: config_spacy_embeddings.yml  domain.yml
tests/: test_actions.py  test_agents.py  test_characters.py  test_dmai.py  test_domain.py  test_game.py  test_monsters.py  test_nlg.py  test_nlu.py  test_planning.py  test_utils.py  test_world.py
(+73 files in other folders)
